<?xml version="1.0" encoding="utf-8"?>
<resources>
    
     <string name="app_name">ComPrint2.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="toggle_button">ToggleButton</string>
    <string name="time_interval">1000</string>
    <string name="millisecond">ms</string>
    <string name="auto_checkbox">Auto</string>
    <string name="input_data_hint">Please input print data of test!</string>
    
    <string name="clear">Clear</string>
    <string name="send">Send Test Data</string>
    <string name="barcode_1D">1D_barcode</string>
    <string name="printer_state">PrinterState</string>
    <string name="report_print">ReportPrint</string>
    <string name="bank_queue">BankQueue</string>
    <string name="test_print">TestPrint</string>
    <string name="self_check">PrintSelfcheck</string>
    <!-- Spaceline -->
    <string name="spaceline_tv">Spaceline input\nAs follows：20/40/60/80</string>
    <string name="spaceline_et">40</string>
    
    <!-- Align -->
    <string name="Align_model">Align</string>
	<string name="left">Left</string>
	<string name="center">Center</string>
	<string name="right">Right</string>
	<!-- Underline-->
	<string name="Underline_model">Underline</string>
	<string name="underline_cancel">Cancel</string>
	<string name="underline_one">Underline1</string>
	<string name="underline_two">Underline2</string>
	<!-- Italic -->
	<string name="Italic_model">Italic</string>
	<string name="italic_cancel">Cancel</string>
	<string name="italic_setting">Italic</string>
	<!-- Cutpaper -->
	<string name="Cutpaper_model">Cutpaper</string>
	<string name="cutpaper_total">Total</string>
	<string name="cutpaper_half">Half</string>
	<!-- Font Rotate -->
	<string name="Rotate_model">FontRotate</string>
	<string name="rotate_cancel">Rotate_cancel</string>
	<string name="rotate_90D">Rotate_90d</string>
	<!-- Toast -->
	<string name="Serial_connect_failed">Serial connection failed,please try again!</string>
	<string name="Test_data_is_empty">Test data is empty,please try again!</string>
	<!-- ShowMessage -->
	<string name="No_read_or_write_permissions">Serial port failed to open: no serial read / write permissions</string>
	<string name="Unknown_error">Failed to open serial port: unknown error!</string>
	<string name="Parameter_error">Failed to open serial port: parameter error!</string>
	<string name="State_query">State query......</string>
	<string name="Serial_port_not_open">Serial port is not open!</string>

</resources>
