<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayoutTooLCOMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/SpinnerCOMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp" />

        <LinearLayout
            android:id="@+id/LinearLayoutOption1COMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Spinner
                android:id="@+id/SpinnerBaudRateCOMA"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/toggleButtonCOMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOption2COMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/editTextTimeCOMA"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/time_interval" >
            </EditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/millisecond" />

            <CheckBox
                android:id="@+id/checkBoxAutoCOMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/auto_checkbox"
                android:width="90dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRecDisp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/editTextRecDisp"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:editable="false"
            android:gravity="top"
            android:longClickable="false"
            android:scrollbars="vertical"
            android:textSize="14sp" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/LinearLayoutRecTool"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/ButtonClear"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/clear"
                android:width="90dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCOMAB"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/LinearLayoutCOMA"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout_comA"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/editTextCOMA"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:hint="@string/input_data_hint" />

                <LinearLayout
                    android:id="@+id/LinearLayout_comB"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/ButtonSendCOMA"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/send"
                        android:width="90dp" />

                    <Button
                        android:id="@+id/ButtonDemoCOMA"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/test_print"
                        android:width="90dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>